--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrepreneurship and E-Commerce Systems</title>
+    <title>Crypto and Web3 Development</title>
     <style>
         body {
             margin: 0;
@@ -95,7 +95,7 @@
 <body>
     <div class="overlay">
         <div class="container">
-            <h1>Entrepreneurship and E-Commerce Systems</h1>
+            <h1>Crypto and Web3 Development</h1>
             <p style="text-align: center; font-size: 1.2rem; margin-bottom: 30px;">
                 Master the art of digital business creation and scaling
             </p>
@@ -120,7 +120,7 @@
 
             <h2>Who Should Enroll?</h2>
             <ul>
-                <li>Aspiring digital entrepreneurs</li>
+                <li>Beginner crypto bros</li>
                 <li>Existing e-commerce store owners</li>
                 <li>Amazon FBA and Shopify sellers</li>
                 <li>Career changers entering online business</li>
@@ -134,4 +134,5 @@
         </div>
     </div>
 </body>
+
 </html>
